--- a/README
+++ b/README
@@ -17,3 +17,17 @@ Basculer sur sa branche :
 git checkout branche_mecgs
 
 
+----------------------------
+Install Projet
+----------------------------
+
+Dans pom.xml, références des librairies à récupérer pour le projet.
+
+Pour les installer, Run as... Maven install
+
+Si erreur du style : Pas de compilateur Java,
+Vérifier que dans le build path du projet, 
+le JRE utilisé est bien celui contenu dans le JDK.
+
+
+
